# shiny

./: README.md  remoting.h  test.cpp
doc/: DataManager2.latex
src/: CMakeLists.txt  color_patternlayout.cpp  color_patternlayout.h  dm.h  dm_interface.h  eventhandler.h  logger.h  remoting.h  test.cpp  transport.h  transport_udp.cpp  transport_udp.h
src/config/: ucslog.properties
src/proto/: comm.proto
